--- a/app/src/main/res/layout/dialog_game_result.xml
+++ b/app/src/main/res/layout/dialog_game_result.xml
@@ -99,7 +99,7 @@
 
                 <TextView
                     android:id="@+id/difficulty"
-                    android:layout_width="wrap_content"
+                    android:layout_width="160dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/comixregular"
@@ -115,6 +115,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/firstRowGameResult">
+
+                <TextView
+                    android:id="@+id/subDifficulty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="20dp"
+                    android:fontFamily="@font/comixregular"
+                    android:text="Subnivel: 0"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
+
 
                 <TextView
                     android:id="@+id/points"
@@ -138,6 +150,27 @@
                     android:textSize="24sp" />
 
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/thirdRowGameResult"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/secondRowGameResult">
+
+            <TextView
+                android:id="@+id/newSubDifficulty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/comixregular"
+                android:gravity="center"
+                android:visibility="gone"
+                android:textColor="@color/yellow"
+                android:textSize="24sp" />
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
