--- a/app/src/main/res/layout/user_init_page.xml
+++ b/app/src/main/res/layout/user_init_page.xml
@@ -43,14 +43,33 @@
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"
+        android:visibility="gone"
         android:text="@string/difficulty"
         android:textColor="@color/light_font"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userName" />
+
+    <TextView
+        android:id="@+id/subUserDifficulty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/comixregular"
+        android:shadowColor="@color/text_shadow"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:visibility="gone"
+        android:text="@string/user_subdifficulty"
+        android:textColor="@color/light_font"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userDifficulty" />
 
     <LinearLayout
         android:id="@+id/buttonList"
@@ -63,7 +82,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/userDifficulty">
+        app:layout_constraintTop_toBottomOf="@id/subUserDifficulty">
 
         <android.widget.Button
             android:id="@+id/managementButton"
