--- a/app/src/main/res/layout/dialog_game_result.xml
+++ b/app/src/main/res/layout/dialog_game_result.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/background_color"
     app:cardCornerRadius="12dp"
     app:cardElevation="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
@@ -22,7 +22,7 @@
             android:gravity="center"
             android:text="@string/you_won"
             android:textColor="#C65D18 "
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
             android:fontFamily="@font/comixregular"
             android:text="@string/lost_errors"
             android:textColor="@color/light_blue"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/gameStats"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/rounded_border"
@@ -69,11 +69,13 @@
 
             <LinearLayout
                 android:id="@+id/firstRowGameResult"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center_horizontal"
+                >
 
                 <TextView
                     android:id="@+id/timePlayed"
@@ -99,7 +101,7 @@
 
                 <TextView
                     android:id="@+id/difficulty"
-                    android:layout_width="160dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/comixregular"
@@ -110,11 +112,13 @@
 
             <LinearLayout
                 android:id="@+id/secondRowGameResult"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/firstRowGameResult">
+                app:layout_constraintTop_toBottomOf="@+id/firstRowGameResult"
+                android:gravity="center_horizontal"
+                >
 
                 <TextView
                     android:id="@+id/subDifficulty"
@@ -154,11 +158,13 @@
 
             <LinearLayout
                 android:id="@+id/thirdRowGameResult"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/secondRowGameResult">
+                app:layout_constraintTop_toBottomOf="@+id/secondRowGameResult"
+                android:gravity="center_horizontal"
+                >
 
             <TextView
                 android:id="@+id/newSubDifficulty"
@@ -174,19 +180,5 @@
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <android.widget.Button
-            android:id="@+id/closeButton"
-            style="@style/ButtonStyleMenu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingHorizontal="18sp"
-            android:paddingVertical="20sp"
-            android:text="@string/close"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gameStats" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
